@@ -362,6 +362,8 @@ class Skin extends Linker {
 			$vars['wgAjaxWatch'] = $msgs;
 		}
 
+		wfRunHooks('ExtendJSGlobalVars', array(&$vars));
+
 		return self::makeVariablesScript( $vars );
 	}
 
